--- a/src/pages/iedcwebinar.astro
+++ b/src/pages/iedcwebinar.astro
@@ -104,6 +104,37 @@ import Layout from "../layouts/Layout.astro";
             
         </div>
 
+        <div class="flex flex-col md:flex-row  w-full md:space-x-4 space-x-0 md:space-y-0 space-y-4 text-center mt-4">
+            <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
+                <p class="text-base">DAY 4</p>
+                <p class="text-sm">10th April 2020  06:00 PM IST</p>
+                <img src="img/4.jpg" class=" mx-auto object-contain w-44 h-44">
+                <p class=" text-xl font-bold">ROBIN TOMMY</p>
+                <p class="text-sm font-semibold  justify-center mx-auto">Innovation Strategist | StoryTeller | Startup Mentor | EmTech Advisor | Human Centric Innovator | TEDx Speaker.</p>
+                <p class="  text-blue-700 font-semibold">Topic: Social Innovation and Sustainability</p>
+                <a href="" class="bg-blue-900 text-white px-3 font-semibold absolute inset-x-0 bottom-0">Watch on Youtube</a>
+            </div>
+            <div class="flex-col md:w-1/3 w-full space-y-1 border p-4 relative h-96">
+                <p class="text-base">DAY 5</p>
+                <p class="text-sm">11th April 2020 05:00 PM IST</p>
+                <img src="img/5.jpg" class=" mx-auto object-contain w-44 h-44">
+                <p class=" text-xl font-bold">DR SAJI GOPINATH</p>
+                <p class="text-sm font-semibold  justify-center mx-auto">CEO, Kerala Startup Mission</p>
+                <p class="  text-blue-700 font-semibold">Topic: Embracing the Future: Innovation & Disruption </p>
+                <a href="" class="bg-blue-900 text-white px-3 font-semibold absolute inset-x-0 bottom-0">Watch on Youtube</a>
+            </div>
+            <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
+                <p class="text-base">DAY 6</p>
+                <p class="text-sm">12th April 2020 . 05:00 PM IST</p>
+                <img src="img/6.jpg" class=" mx-auto object-contain w-44 h-44">
+                <p class=" text-xl font-bold">VIMAL GOVIND MK</p>
+                <p class="text-sm font-semibold  justify-center mx-auto">Co-Founder,CEO & Product Architect at Genrobotic Innovations</p>
+                <p class="  text-blue-700 font-semibold">Topic: Zero to One - Startup Founder perspective</p>
+                <a href="" class="bg-blue-900 text-white px-3 font-semibold absolute inset-x-0 bottom-0">Watch on Youtube</a>
+            </div>
+            
+        </div>
+
     </section>
 
 </Layout>
