--- a/src/pages/iedcwebinar.astro
+++ b/src/pages/iedcwebinar.astro
@@ -117,7 +117,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1 border p-4 relative h-96">
                 <p class="text-base">DAY 5</p>
                 <p class="text-sm">11th April 2020 05:00 PM IST</p>
-                <img src="img/5.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/5.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">DR SAJI GOPINATH</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">CEO, Kerala Startup Mission</p>
                 <p class="  text-blue-700 font-semibold">Topic: Embracing the Future: Innovation & Disruption </p>
@@ -126,7 +126,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
                 <p class="text-base">DAY 6</p>
                 <p class="text-sm">12th April 2020 . 05:00 PM IST</p>
-                <img src="img/6.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/6.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">VIMAL GOVIND MK</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Co-Founder,CEO & Product Architect at Genrobotic Innovations</p>
                 <p class="  text-blue-700 font-semibold">Topic: Zero to One - Startup Founder perspective</p>
