--- a/src/pages/iedcnest.astro
+++ b/src/pages/iedcnest.astro
@@ -18,7 +18,7 @@ import '../../public/js/main.js'
     <section class="pb-24 px-12 py-24">
 		<div class="flex md:flex-row flex-col md:space-x-10 space-x-0 ">
 			<div class="flex md:w-1/2 w-full mx-auto md:mt-0 mt-4">
-				<img src="img/NEST.png" class=" rounded-3xl object-center">
+				<img src="../img/NEST.png" class=" rounded-3xl object-center">
 			</div>
 			<div class="md:w-1/2 w-full">
 				<h2 class="w-full pb-4 md:text-4xl text-blue-900 font-extrabold text-2xl">IEDC NEST</h2>
@@ -49,14 +49,14 @@ import '../../public/js/main.js'
 					
             </div> 
             <div class="md:flex w-1/2 hidden overflow-hidden">
-                <img src="img/AdobeStock_564170163.jpeg" class=" hover:opacity-75 hover:scale-125 hover:duration-200">
+                <img src="../img/AdobeStock_564170163.jpeg" class=" hover:opacity-75 hover:scale-125 hover:duration-200">
             </div> 
         </div>
 
         <div class="flex md:flex-row flex-col">
            
             <div class="md:flex w-1/2 hidden overflow-hidden">
-                <img src="img/AdobeStock_579904085.jpeg" class=" hover:opacity-75 hover:scale-125 hover:duration-200">
+                <img src="../img/AdobeStock_579904085.jpeg" class=" hover:opacity-75 hover:scale-125 hover:duration-200">
             </div> 
             <div class="flex md:w-1/2 w-full px-5 flex-col pt-8">
                 <h1 class="w-full pb-4 md:text-xl text-blue-900 font-extrabold text-xl text-center">Selection Process</h1>
@@ -80,16 +80,16 @@ import '../../public/js/main.js'
 
     <div class="flex md:flex-row flex-col ">
         <div class="md:w-1/4 w-full ">
-            <img src="img/iedc/State Leads.png">
+            <img src="../img/iedc/State Leads.png">
         </div>
         <div class="md:w-1/4 w-full ">
-            <img src="img/iedc/NESTSouth.png">
+            <img src="../img/iedc/NESTSouth.png">
         </div>
         <div class="md:w-1/4 w-full ">
-            <img src="img/iedc/NESTCentral.png">
+            <img src="../img/iedc/NESTCentral.png">
         </div>
         <div class="md:w-1/4 w-full ">
-            <img src="img/iedc/NESTNorth.png">
+            <img src="../img/iedc/NESTNorth.png">
         </div>
     </div>
 </section>
