--- a/src/pages/iedcteam.astro
+++ b/src/pages/iedcteam.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
     <section class="px-12 pt-24 pb-56 md:pb-24">
 		<div class="flex md:flex-row flex-col items-center justify-center md:space-x-28 space-x-0">
             <div class="w-56 h-56 text-center">
-                <img src="img/4422e2ff-a4ec-477e-a3d9-ce3e38210a98.jpg" class="object-contain">
+                <img src="../img/4422e2ff-a4ec-477e-a3d9-ce3e38210a98.jpg" class="object-contain">
                 <p class="font-bold pt-1">Shri. Anoop Ambika</p>
                 <p>Chief Executive Officer</p>
                 <p class="flex justify-center space-x-3">
@@ -42,7 +42,7 @@ import Layout from "../layouts/Layout.astro";
             </div>
 
             <div class=" w-52 h-52 md:pt-2 pt-28 text-center">
-                <img src="img/9b6f663e-9a36-40fb-9561-5acd5f2f1646.jpg" class=" object-contain">
+                <img src="../img/9b6f663e-9a36-40fb-9561-5acd5f2f1646.jpg" class=" object-contain">
                 <p class="font-bold pt-1">Bergin S Russel</p>
                 <p>Assistant Manager</p>
                 <p class="flex justify-center space-x-3">
@@ -68,13 +68,13 @@ import Layout from "../layouts/Layout.astro";
         </div>
         <!-- <div class="flex md:flex-row flex-col container mx-auto mt-28">
             <div class="w-56 h-56 mx-auto flex">
-                <img src="img/9b6f663e-9a36-40fb-9561-5acd5f2f1646.jpg" class=" object-contain  mx-auto ">
+                <img src="../img/9b6f663e-9a36-40fb-9561-5acd5f2f1646.jpg" class=" object-contain  mx-auto ">
             </div>
             <div class="w-56 h-56 mx-auto flex">
-                <img src="img/4422e2ff-a4ec-477e-a3d9-ce3e38210a98.jpg" class=" object-contain  mx-auto">
+                <img src="../img/4422e2ff-a4ec-477e-a3d9-ce3e38210a98.jpg" class=" object-contain  mx-auto">
             </div>
             <div class="w-56 h-56 mx-auto flex">
-                <img src="img/4422e2ff-a4ec-477e-a3d9-ce3e38210a98.jpg" class=" object-contain  mx-auto">
+                <img src="../img/4422e2ff-a4ec-477e-a3d9-ce3e38210a98.jpg" class=" object-contain  mx-auto">
             </div>
         </div> -->
 	</section>
