--- a/src/pages/iedcwebinar.astro
+++ b/src/pages/iedcwebinar.astro
@@ -26,7 +26,7 @@ import Layout from "../layouts/Layout.astro";
     <section class="px-12 pb-24">
         <div class="flex flex-col md:flex-row">
             <div class="flex md:w-1/3 w-full items-center justify-center my-auto">
-                <img src="img/png-transparent-kerala-startup-mission-hd-logo-thumbnail-removebg-preview.png" class=" my-auto object-contain">
+                <img src="../img/png-transparent-kerala-startup-mission-hd-logo-thumbnail-removebg-preview.png" class=" my-auto object-contain">
             </div>
             <div class="flex flex-col md:w-2/3 text-justify w-full items-center justify-center">
                 <h1 class="pb-3 text-2xl font-bold text-blue-900">Kerala Startup Mission is set to organise webinar series for the student champions in three major areas – Innovation, Technology, and Entrepreneurship.</h1>
@@ -46,7 +46,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
                 <p class="text-base">DAY 1</p>
                 <p class="text-sm">07th April 2020  05:00 PM IST</p>
-                <img src="img/1.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/1.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">ARUN SURENDRAN</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Principal and Strategic Director, Trinity College of Engineering  </p>
                 <p class="  text-blue-700 font-semibold">Topic: The Art of Innovation</p>
@@ -55,7 +55,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1 border p-4 relative h-96">
                 <p class="text-base">DAY 2</p>
                 <p class="text-sm">08th April 2020  03:00 PM IST</p>
-                <img src="img/2.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/2.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">SANTHOSH KURUP</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Chief Executive Officer, ICT Academy of Kerala</p>
                 <p class="  text-blue-700 font-semibold">Topic: Need of skill training & Student Startup Ecosystem </p>
@@ -64,7 +64,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
                 <p class="text-base">DAY 3</p>
                 <p class="text-sm">09th April 2020  02:00 PM IST</p>
-                <img src="img/3.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/3.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">NIVEDHA R.M</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Founder - TrashCon</p>
                 <p class="  text-blue-700 font-semibold">Topic: The Entrepreneurial journey </p>
@@ -77,7 +77,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
                 <p class="text-base">DAY 4</p>
                 <p class="text-sm">10th April 2020  06:00 PM IST</p>
-                <img src="img/4.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/4.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">ROBIN TOMMY</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Innovation Strategist | StoryTeller | Startup Mentor | EmTech Advisor | Human Centric Innovator | TEDx Speaker.</p>
                 <p class="  text-blue-700 font-semibold">Topic: Social Innovation and Sustainability</p>
@@ -86,7 +86,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1 border p-4 relative h-96">
                 <p class="text-base">DAY 5</p>
                 <p class="text-sm">11th April 2020 05:00 PM IST</p>
-                <img src="img/5.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/5.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">DR SAJI GOPINATH</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">CEO, Kerala Startup Mission</p>
                 <p class="  text-blue-700 font-semibold">Topic: Embracing the Future: Innovation & Disruption </p>
@@ -95,7 +95,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
                 <p class="text-base">DAY 6</p>
                 <p class="text-sm">12th April 2020 . 05:00 PM IST</p>
-                <img src="img/6.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/6.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">VIMAL GOVIND MK</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Co-Founder,CEO & Product Architect at Genrobotic Innovations</p>
                 <p class="  text-blue-700 font-semibold">Topic: Zero to One - Startup Founder perspective</p>
@@ -108,7 +108,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex-col md:w-1/3 w-full space-y-1  border p-4 relative h-96">
                 <p class="text-base">DAY 4</p>
                 <p class="text-sm">10th April 2020  06:00 PM IST</p>
-                <img src="img/4.jpg" class=" mx-auto object-contain w-44 h-44">
+                <img src="../img/4.jpg" class=" mx-auto object-contain w-44 h-44">
                 <p class=" text-xl font-bold">ROBIN TOMMY</p>
                 <p class="text-sm font-semibold  justify-center mx-auto">Innovation Strategist | StoryTeller | Startup Mentor | EmTech Advisor | Human Centric Innovator | TEDx Speaker.</p>
                 <p class="  text-blue-700 font-semibold">Topic: Social Innovation and Sustainability</p>
