--- a/src/pages/iedcsalt.astro
+++ b/src/pages/iedcsalt.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
     <section class="pb-24 px-12 py-24">
 		<div class="flex md:flex-row flex-col">
 			<div class="md:w-1/2 w-full mx-auto md:mt-0 mt-4 md:flex hidden rounded-full">
-				<img src="../img/AdobeStock_246418891.jpeg" class="object-center rounded-full">
+				<img src="img/AdobeStock_246418891.jpeg" class="object-center rounded-full">
 			</div>
 			<div class="md:w-1/2 w-full  my-auto px-8 py-8">
                 
@@ -42,7 +42,7 @@ import Layout from "../layouts/Layout.astro";
                 <p>Batch 2 Application is Now Open in Innovate Portal under Projects - Last Date is 15 July 2022.<span class=" mx-2 px-2 py-1 bg-blue-800 text-white rounded-full font-semibold"><a href="">Apply Now</a></span></p>
             </div>
             <div class="md:w-1/2 w-full mx-auto md:mt-0 mt-4 md:flex hidden">
-				<img src="../img/AdobeStock_574808219.jpeg" class="object-center">
+				<img src="img/AdobeStock_574808219.jpeg" class="object-center">
 			</div> 
 		</div>
 	</section>
