--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,13 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="">
 	<main class="">
-		<div class="flex -z-10 bg-cover object-center min-w-full bg-center bg-no-repeat w-full  min-h-screen" style="background-image:url('../public/img/AdobeStock_417387712.jpg')">
+		<div class="flex -z-10 bg-cover object-center min-w-full bg-center bg-no-repeat w-full  min-h-screen" style="background-image:url('/img/AdobeStock_417387712.jpg')">
 		<div class="container text-left my-auto">
 			<h1 class="md:pl-14 md:text-6xl font-bold text-blue-900 md:w-2/3 text-4xl w-full px-6 md:mx-0">
 				Innovation and Entrepreneurship Development Centres (IEDC)
 			</h1>
 
+			<!-- <Countdown date="2022-09-23T09:00" client:load ></Countdown> -->
 		</div>
 		</div>
 
@@ -20,7 +21,7 @@ import Layout from "../layouts/Layout.astro";
 	<section class="py-24 px-12">
 			<div class="flex md:flex-row flex-col md:space-x-10 space-x-0">
 				<div class="flex md:w-1/2 w-full">
-					<img src="../img/AdobeStock_578461886.jpeg" class="rounded-3xl  object-center">
+					<img src="img/AdobeStock_578461886.jpeg" class="rounded-3xl  object-center">
 				</div>
 				<div class=" md:w-1/2 w-full">
 					<h2 class="w-full pb-8 md:text-4xl text-blue-900 font-extrabold text-2xl">LATEST ANNOUNCEMENTS </h2>
@@ -61,7 +62,7 @@ import Layout from "../layouts/Layout.astro";
 						Read More
 					  </button></div>
 			<div class="flex md:w-1/2 w-full mx-auto md:mt-0 mt-4">
-				<img src="../img/Untitled design (1).png" class=" rounded-3xl object-center">
+				<img src="img/Untitled design (1).png" class=" rounded-3xl object-center">
 			</div>
 		</div>
 	</section>
@@ -69,7 +70,7 @@ import Layout from "../layouts/Layout.astro";
 	<section class="pb-24 px-12">
 		<div class="flex md:flex-row flex-col md:space-x-10 space-x-0 ">
 			<div class="flex md:w-1/2 w-full mx-auto md:mt-0 mt-4">
-				<img src="../img/AdobeStock_246421751.jpeg" class=" rounded-3xl object-center">
+				<img src="img/AdobeStock_246421751.jpeg" class=" rounded-3xl object-center">
 			</div>
 			<div class="md:w-1/2 w-full">
 				<h2 class="w-full pb-8 md:text-4xl text-blue-900 font-extrabold text-2xl">KERALA STARTUP MISSION (KSUM)</h2>
@@ -151,17 +152,17 @@ import Layout from "../layouts/Layout.astro";
 
 	  <section class="pb-24  px-12">
 		<div class="flex md:flex-row flex-col">
-			<div class="flex w-full md:w-1/3 text-center md:h-28" style="background-image:url('../img/Untitled design.png')">
+			<div class="flex w-full md:w-1/3 text-center md:h-28" style="background-image:url('/img/Untitled design.png')">
 				<a class="mx-auto my-auto" href="https://drive.google.com/file/d/1blLnBMCFcuKSmQi0fy2lQC7Vo1Fp09Z4/view" target="_blank"><div class=" hover:bg-orange-500 hover:bg-opacity-80 bg-slate-800 text-white h-fit py-4 px-4 mx-auto my-auto bg-opacity-80 text-lg font-bold">Schemes - Handbook</div></a>
 				
 			</div>
 
-			<div class="flex w-full md:w-1/3 text-center md:h-28" style="background-image:url('../img/Untitled design.png')">
+			<div class="flex w-full md:w-1/3 text-center md:h-28" style="background-image:url('/img/Untitled design.png')">
 				<a class="mx-auto my-auto" href="https://drive.google.com/file/d/1hCae3lvemi7L4_8dDob6Qg2sHbOQZ8uu/view" target="_blank"><div class=" hover:bg-orange-500 hover:bg-opacity-80 bg-slate-800 text-white h-fit py-4 px-4 mx-auto my-auto bg-opacity-80 text-lg font-bold">IEDC - Nodal Officer Handbook</div></a>
 
 			</div>
 
-			<div class="flex w-full md:w-1/3 text-center md:h-28" style="background-image:url('../img/Untitled design.png')">
+			<div class="flex w-full md:w-1/3 text-center md:h-28" style="background-image:url('/img/Untitled design.png')">
 				<a class="mx-auto my-auto" href=""><div class=" hover:bg-orange-500 hover:bg-opacity-80 bg-slate-800 text-white h-fit py-4 px-4 mx-auto my-auto bg-opacity-80 text-lg font-bold">Join the Tribe - Student Application Form</div></a>
 
 			</div>
@@ -203,7 +204,7 @@ import Layout from "../layouts/Layout.astro";
 					<div class="flex md:flex-row md:w-3/4 w-full">
 						<div  id="vision" class="flex space-x-0 md:space-x-6 divcls">
 							<div class="w-1/3 h-full md:flex hidden mx-auto my-auto">
-								<img src="../img/Untitled design (2).png" class="rounded-xl">
+								<img src="img/Untitled design (2).png" class="rounded-xl">
 							</div>
 							<div class="md:w-2/3 h-full text-justify w-full">
 								<p class="py-9 text-base">To create an innovation culture among Innovators by introducing them the State-of-the-art technologies and positioning the Institution as a Learning and Innovation Platform by delivering technically competent and skilled Entrepreneurs.</p>
@@ -212,7 +213,7 @@ import Layout from "../layouts/Layout.astro";
 						
 						<div id="purpose" class="flex space-x-0 md:space-x-6 divcls"  style="display:none">
 							<div class="w-1/3 h-full md:flex hidden mx-auto my-auto">
-								<img src="../img/Untitled design (3).png" class="rounded-xl">
+								<img src="img/Untitled design (3).png" class="rounded-xl">
 							</div>
 							<div class="md:w-2/3 h-full text-justify w-full">
 								<p class="py-9 text-base">The purpose of the IEDCs will be to act as an aspirational platform, for the l student entrepreneurs and tech savvy innovators, in skilling and sharpening their entrepreneurial skill sets. The selected innovators will be exposed to Innovation culture, emerging technologies and Business aspects with the implicit assumption that the delta will become an entrepreneur and all the other skilled talents will get high end jobs with the kind of exposure and skills they acquire.</p>
@@ -220,7 +221,7 @@ import Layout from "../layouts/Layout.astro";
 						</div>
 						<div  id="mission" class="flex space-x-0 md:space-x-6 divcls"  style="display:none" >
 							<div class="w-1/3 h-full md:flex hidden mx-auto my-auto">
-								<img src="../img/mission-removebg-preview.png" class="rounded-xl">
+								<img src="img/mission-removebg-preview.png" class="rounded-xl">
 							</div>
 							<div class="md:w-2/3 h-full text-justify w-full">
 								<p class="py-9 text-base">To create IEDC as an Innovation Platform and to create future founders by promoting Innovation, Technology and Business Learning among student community.</p>
@@ -228,7 +229,7 @@ import Layout from "../layouts/Layout.astro";
 						</div>
 						<div  id="objectives" class="flex space-x-0 md:space-x-6 divcls" style="display:none" >
 							<div class="w-1/3 h-full md:flex hidden mx-auto my-auto">
-								<img src="../img/objectives.png" class="rounded-xl">
+								<img src="img/objectives.png" class="rounded-xl">
 							</div>
 							<div class="md:w-2/3 h-full text-justify w-full list-inside list-disc">
 								<!-- <p class="py-9">To create an innovation culture among Innovators by introducing them the State-of-the-art technologies and positioning the Institution as a Learning and Innovation Platform by delivering technically competent and skilled Entrepreneurs.</p> -->
