--- a/src/pages/iedcleap.astro
+++ b/src/pages/iedcleap.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
     <section class="pb-24 px-12 py-24">
 		<div class="flex md:flex-row flex-col">
 			<div class="md:w-1/2 w-full mx-auto md:mt-0 mt-4 md:flex hidden">
-				<img src="../img/AdobeStock_100777578.jpeg" class="object-center">
+				<img src="img/AdobeStock_100777578.jpeg" class="object-center">
 			</div>
 			<div class="md:w-1/2 w-full  my-auto px-8 py-8">
 				<h2 class=" text-2xl text-blue-900 pb-2"><span class="w-full pb-4 md:text-4xl text-blue-900 font-extrabold text-2xl">L</span>ocal <span class="w-full pb-4 md:text-4xl text-blue-900 font-extrabold text-2xl">E</span>ntrepreneurship <span class="w-full pb-4 md:text-4xl text-blue-900 font-extrabold text-2xl">A</span>dvancement <span class="w-full pb-4 md:text-4xl text-blue-900 font-extrabold text-2xl">P</span>rogram</h2>
@@ -41,7 +41,7 @@ import Layout from "../layouts/Layout.astro";
 
             </div>
             <div class="md:w-1/2 w-full mx-auto md:mt-0 mt-4 md:flex hidden">
-				<img src="../img/AdobeStock_572847559.jpeg" class="object-center">
+				<img src="img/AdobeStock_572847559.jpeg" class="object-center">
 			</div> 
 		</div>
 	</section>
@@ -52,7 +52,7 @@ import Layout from "../layouts/Layout.astro";
 			<div class="flex  flex-col md:w-1/6 w-full justify-center items-center">
 			</div>
 			<div class="flex  flex-col md:w-1/3 w-full justify-center items-center my-auto">
-				<img src="../img/LEAP.jpg" class="h-96 w-96 object-contain">
+				<img src="img/LEAP.jpg" class="h-96 w-96 object-contain">
 			</div>
 			<div class="flex  flex-col md:w-1/3 w-full container items-center justify-center">
 				<div class="flex w-full  text-center md:h-28" style="background-image:url('/img/Untitled design.png')">
